lskypro ver to 2.1

--- a/.github/workflows/release-docker.yaml
+++ b/.github/workflows/release-docker.yaml
@@ -1,8 +1,7 @@
 name: Build and push Docker images
-
 on:
-  schedule:
-  - cron: '0 7 * * *'
+  release:
+    types: [published]
 
 env:
   TZ: Asia/Shanghai 
@@ -16,7 +15,7 @@ jobs:
 
       - name: Download and Unzip Upstream Source Code
         run: |
-          curl -OL https://github.com/lsky-org/lsky-pro/archive/refs/heads/master.zip
+          curl -OL https://github.com/lsky-org/lsky-pro/archive/refs/tags/2.1.zip
           unzip *.zip
           mv ./lsky-pro-master/* ./
           mv ./lsky-pro-master/.env.example ./
@@ -35,10 +34,10 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
       
       - name: Build and push
         run: |
-          docker build -t halcyonazure/lsky-pro-docker:latest .
-          docker push halcyonazure/lsky-pro-docker:latest
+          docker build -t liuzzzz/lskypro:2.1 .
+          docker push liuzzzz/lskypro:2.1
