--- a/.github/workflows/release-docker.yaml
+++ b/.github/workflows/release-docker.yaml
@@ -17,9 +17,9 @@ jobs:
         run: |
           curl -OL https://github.com/lsky-org/lsky-pro/archive/refs/tags/2.1.zip
           unzip *.zip
-          mv ./lsky-pro-master/* ./
-          mv ./lsky-pro-master/.env.example ./
-          rm -rf master.zip lsky-pro-master
+          mv ./lsky-pro-2.1/* ./
+          mv ./lsky-pro-2.1/.env.example ./
+          rm -rf 2.1.zip lsky-pro-2.1
 
       - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
         with:
